# RoboticPlatform

./: CMakeLists.txt  FXOS8700CQ.h  README.md  electricDrive.cpp  electricDrive.h  fdrm_stbc_agm01.cpp  fdrm_stbc_agm01.h  main.cpp  motor.cpp  motor.h  speed_sensor.cpp  speed_sensor.h  stereoCam.cpp  stereoCam.h  tcp_ip_server.cpp  tcp_ip_server.h  videoCapture.cpp  videoCapture.h
